--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
     "@tamagui/config": "^1.74.15",
     "react": "18.2.0",
     "react-native": "0.72.6",
