--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tamagui/config": "^1.74.15",
     "react": "18.2.0",
+    "react-if": "^4.1.5",
     "react-native": "0.72.6",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "tamagui": "^1.74.15"
   },
   "devDependencies": {
