--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-super-grid": "^5.0.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "tamagui": "^1.74.15"
