--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.7",
-    "@tamagui/config": "^1.74.15",
+    "@tamagui/config": "^1.74.19",
+    "@tamagui/lucide-icons": "^1.74.19",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-if": "^4.1.5",
     "react-native": "0.72.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-super-grid": "^5.0.0",
+    "react-native-svg": "^13.14.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.74.15"
+    "tamagui": "^1.74.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
